--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>INFO2180 Lab 2</h1>
     <p>This is a webpage for Lab 2 of INFO2180.</p>
+    <img src="info2180-lab2/web-development-programming-resized.jpg">
 </body>
 </html>
